// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a styled component with custom props 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={1}
  style={
    Object {
      "color": "blue",
    }
  }
/>
`;

exports[`creates a styled component with dynamic props 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={3}
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`creates a styled component with dynamic props 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={1}
  oneLiner={true}
  style={
    Object {
      "color": "red",
    }
  }
/>
`;
